cours/generated.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mon-pod
  name: mon-pod
spec:
  containers:
  - image: nginx
    name: mon-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
